--- a/styles/style.css
+++ b/styles/style.css
@@ -34,10 +34,34 @@ nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
   margin-top: 10px;
   font-size: 13px;
-  margin-right: 30px;
+  margin-right: 18px;
+  margin-top: 15px;
+}
+
+.nav-link {
+  padding-bottom: 10px;
+  padding-top: 2px;
+}
+
+.apps-icon svg {
+  color: #5f6368;
+  cursor: pointer;
+  fill: currentColor;
+  height: 24px;
+  width: 24px;
+  margin-right: 5px;
+}
+
+.apps-icon {
+  margin-left: 12px;
+  margin-bottom: 2px;
+}
+
+.profile-icon img {
+  border-radius: 50%;
 }
 
 /* Links */
@@ -60,8 +84,8 @@ main {
   align-items: center;
   justify-content: center;
   height: 55vh;
-  min-height: 300px;
-  margin-top: 50px;
+  margin-top: 78px;
+  min-height: 145px;
 }
 
 .logo {
