--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,6 @@ input:focus {
 footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -186,17 +185,22 @@ footer {
   background: var(--footer-background);
   color: var(--footer-font);
   font-size: 14px;
-  padding: 10px 0 10px 30px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  min-width: 400px;
 }
 
 .left-section-footer {
-  margin-left: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .right-section-footer {
-  margin-right: 30px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 footer > div > a {
-  padding: 10px 0 10px 30px;
+  padding: 13px 15px 10px 15px;
 }
