--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,9 @@ html {
 body {
   font-family: arial, sans-serif;
   line-height: 1.6;
+  min-width: 400px;
   /* footer support */
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 /* Navigation */
@@ -34,16 +35,24 @@ nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 15px;
-  margin-top: 10px;
   font-size: 13px;
-  margin-right: 18px;
-  margin-top: 15px;
+  margin-right: 10px;
+  margin-top: 5px;
+}
+
+.nav-links {
+  display: flex;
+  padding-right: 15px;
 }
 
 .nav-link {
-  padding-bottom: 10px;
   padding-top: 2px;
+  padding-left: 15px;
+}
+
+.nav-icons {
+  display: flex;
+  align-items: center;
 }
 
 .apps-icon svg {
@@ -52,12 +61,38 @@ nav {
   fill: currentColor;
   height: 24px;
   width: 24px;
-  margin-right: 5px;
 }
 
 .apps-icon {
-  margin-left: 12px;
-  margin-bottom: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
+  margin: 4px;
+}
+
+.apps-icon:hover {
+  cursor: pointer;
+  background-color: rgba(60, 64, 67, 0.08);
+  border-radius: 50%;
+}
+
+.profile-icon {
+  display: flex;
+  /* flex-direction: row; */
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  margin: 4px;
+}
+
+.profile-icon:hover {
+  background-color: rgba(60, 64, 67, 0.08);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .profile-icon img {
@@ -84,8 +119,8 @@ main {
   align-items: center;
   justify-content: center;
   height: 55vh;
-  margin-top: 78px;
   min-height: 145px;
+  margin-top: 78px;
 }
 
 .logo {
@@ -105,10 +140,10 @@ main {
   display: flex;
   align-items: center;
   height: 44px;
+  max-width: 584px;
   border: 1px solid #dfe1e5;
   border-radius: 24px;
   padding: 5px 8px 0 16px;
-  max-width: 584px;
   margin: 0 auto;
 }
 
@@ -141,11 +176,11 @@ svg {
 
 input {
   border: none;
+  height: 100%;
   width: 100%;
   height: 100%;
   font-size: 16px;
   margin-top: -3px;
-  height: 100%;
 }
 
 input:focus {
@@ -160,8 +195,8 @@ input:focus {
 .btn-search {
   font-size: 14px;
   padding: 10px 20px;
-  border-radius: 4px;
   border: 1px solid transparent;
+  border-radius: 4px;
   background-color: var(--button-search-background);
   cursor: pointer;
 }
